--- a/monopods.html
+++ b/monopods.html
@@ -81,12 +81,12 @@
           <div class="sort-direction">
             <button type="button" class="to-up" aria-label="Сортировка по возрастанию">
               <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                <path fill="#231F20" d="M5.5 0L0 10h11z"/>
+                <path d="M5.5 0L0 10h11z"/>
               </svg>
             </button>
             <button type="button" class="to-down active" aria-label="Сортировка по убыванию">
               <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                <path fill="#231F20" d="M5.5 10L0 0h11"/>
+                <path d="M5.5 10L0 0h11"/>
               </svg>
             </button>
           </div>
