--- a/monopods.html
+++ b/monopods.html
@@ -222,19 +222,20 @@
           <section class="catalog-navigation">
             <h2 class="visually-hidden">Навигация по страницам товаров</h2>
             <div class="catalog-navigation-wrap">
-            <a href="#" class="transition-direction">Назад</a>
-            <ul class="inner-catalog-navigation">
-              <li>
-                <a href="#" class="page-number">1</a>
-              </li>
-              <li>
-                <a href="#" class="page-number inactive">2</a>
-              </li>
-              <li>
-                <a href="#" class="page-number inactive">3</a>
-              </li>
-            </ul>
-            <a href="#" class="transition-direction">Вперед</a>
+              <a href="#" class="transition-direction">Назад</a>
+              <ul class="inner-catalog-navigation">
+                <li>
+                  <a href="#" class="page-number">1</a>
+                </li>
+                <li>
+                  <a href="#" class="page-number inactive">2</a>
+                </li>
+                <li>
+                  <a href="#" class="page-number inactive">3</a>
+                </li>
+              </ul>
+              <a href="#" class="transition-direction">Вперед</a>
+            </div>
           </section>
         </div> <!-- end of inner wrap -->
       </div>  <!-- end of main wrap -->
@@ -249,7 +250,7 @@
             </svg>
           </a>
           <div class="user-navigation-wrapper">
-            <ul footer-user-navigation>
+            <ul class="footer-user-navigation">
               <li><a href="#" class="login-link">Валентин Петухов</a></li>
               <li><a href="#" class="exit-link">Выйти</a></li>
             </ul>
