Личный проект: завершаем вёрстку
Сделал по Pixel Perfect:
Index без футера

--- a/index.html
+++ b/index.html
@@ -26,30 +26,28 @@
             <li><a href="#" class="basket-link">Корзина</a></li>
           </ul>
         </div>
-        <div class="header-wrapper">
-          <ul class="site-navigation">
-            <li>
-              <a href="catalog.html" class="catalog-link">Каталог товаров</a>
-                <div class="drop-menu">
-                  <div class="drop-menu-column">
-                    <a href="#">Виртуальная реальность</a>
-                    <a href="monopods.html">Моноподы для селфи</a>
-                    <a href="#">Экшн-камеры</a>
-                  </div>
-                  <div class="drop-menu-column">
-                    <a href="#">Фитнес-браслеты</a>
-                    <a href="#">Умные часы</a>
-                  </div>
-                  <div class="drop-menu-column">
-                    <a href="#">Квадрокоптеры</a>
-                  </div>
+        <ul class="site-navigation">
+          <li>
+            <a href="catalog.html" class="catalog-link">Каталог товаров</a>
+              <div class="drop-menu">
+                <div class="drop-menu-column">
+                  <a href="#">Виртуальная реальность</a>
+                  <a href="monopods.html">Моноподы для селфи</a>
+                  <a href="#">Экшн-камеры</a>
                 </div>
-            </li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Гарантия</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-        </div>
+                <div class="drop-menu-column">
+                  <a href="#">Фитнес-браслеты</a>
+                  <a href="#">Умные часы</a>
+                </div>
+                <div class="drop-menu-column">
+                  <a href="#">Квадрокоптеры</a>
+                </div>
+              </div>
+          </li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -59,7 +57,7 @@
     <section class="slider-popular container">
       <h2 class="visually-hidden">Популярные товары</h2>
     	<div class="slider-popular-item active">
-        <img src="img/slider-1.png" width="404" height="486" alt="Самая длинная палка для селфи">
+        <img src="img/slider-1.png" width="382" height="486" alt="Самая длинная палка для селфи">
         <div class="item-content">
           <span class="slide-number">01</span>
           <h3>Делай селфи,<br> как Бен Стиллер!</h3>
@@ -244,7 +242,7 @@
 					        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#monopods"></use>
       					</svg>
               </div>
-              <p>Моноподы для селфи</p>
+              <p>Моноподы<br> для селфи</p>
             </a>
           </li>
           <li>
@@ -294,13 +292,13 @@
         <div class="slider-services container">
           <div class="slider-services-navigation">
             <div class="button-box">
-              <button type="button" class="button button-delivery">Доставка</button>
+              <button type="button" class="button button-delivery active">Доставка</button>
               <button type="button" class="button button-warranty">Гарантия</button>
-              <button type="button" class="button button-credit active">Кредит</button>
+              <button type="button" class="button button-credit">Кредит</button>
             </div>
           </div>
           <div class="slider-services-items">
-            <div class="slider-services-item slider-services-delivery">
+            <div class="slider-services-item slider-services-delivery active">
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
             </div>
@@ -308,9 +306,10 @@
               <h3>Гарантия</h3>
               <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
             </div>
-            <div class="slider-services-item slider-services-credit active">
+            <div class="slider-services-item slider-services-credit">
               <h3>Кредит</h3>
               <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+              <!--  -->
             </div>
           </div>
         </div>
@@ -352,6 +351,7 @@
               </svg>
             </a>
           </li>
+
         </ul>
       </section>
 <!-- Info -->
@@ -362,10 +362,10 @@
               Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
             </p>
             <p>
-              Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:
+              Мы можем доставить ваш товар в самые отдаленные точки<br> России! DEVICE работает со многими транспортными компаниями:
             </p>
             <ul class="delivery-list">
-              <li>ДеловыеЛинии</li>
+              <li>Деловые Линии</li>
               <li>Автотрейдинг</li>
               <li>ЖелДорЭкспедиция</li>
             </ul>
