Личный проект: завершаем вёрстку
Завершил верстку проекта

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             </svg>
           </a>
           <div class="user-navigation-wrapper">
-            <ul>
+            <ul class="footer-login">
               <li><a href="#" class="login-link">Войти</a></li>
             </ul>
             <ul class="footer-basket-navigation">
