--- a/monopods.html
+++ b/monopods.html
@@ -27,30 +27,28 @@
             <li><a href="#" class="basket-link">Корзина</a></li>
           </ul>
         </div>
-        <div class="header-wrapper">
-          <ul class="site-navigation">
-            <li>
-              <a href="catalog.html" class="catalog-link">Каталог товаров</a>
-                <div class="drop-menu">
-                  <div class="drop-menu-column">
-                    <a href="#">Виртуальная реальность</a>
-                    <a href="monopods.html">Моноподы для селфи</a>
-                    <a href="#">Экшн-камеры</a>
-                  </div>
-                  <div class="drop-menu-column">
-                    <a href="#">Фитнес-браслеты</a>
-                    <a href="#">Умные часы</a>
-                  </div>
-                  <div class="drop-menu-column">
-                    <a href="#">Квадрокоптеры</a>
-                  </div>
+        <ul class="site-navigation">
+          <li>
+            <a href="catalog.html" class="catalog-link">Каталог товаров</a>
+              <div class="drop-menu">
+                <div class="drop-menu-column">
+                  <a href="#">Виртуальная реальность</a>
+                  <a href="monopods.html">Моноподы для селфи</a>
+                  <a href="#">Экшн-камеры</a>
                 </div>
-            </li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Гарантия</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-        </div>
+                <div class="drop-menu-column">
+                  <a href="#">Фитнес-браслеты</a>
+                  <a href="#">Умные часы</a>
+                </div>
+                <div class="drop-menu-column">
+                  <a href="#">Квадрокоптеры</a>
+                </div>
+              </div>
+          </li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -59,7 +57,7 @@
         <h1>Моноподы для селфи</h1>
         <ul class="breadcrumb">
           <li><a href="index.html" title="Главная">Главная</a></li>
-          <li><a href="catlog.html" title="Каталог">Каталог</a></li>
+          <li><a href="catlog.html" title="Каталог">Каталог товаров</a></li>
           <li><a>Моноподы для селфи</a></li>
         </ul>
       </div>
@@ -111,7 +109,7 @@
                 </button>
               </div>
             </fieldset>
-            <fieldset class="bordered-top">
+            <fieldset class="color-list-set bordered-top">
               <legend>Цвет</legend>
               <ul class="color-list">
                 <li>
@@ -136,7 +134,7 @@
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="bordered-top">
+            <fieldset class="bluetooth-set bordered-top">
               <legend>Bluetooth</legend>
               <ul class="bluetooth-choice">
                 <li>
@@ -182,7 +180,7 @@
                 </div>
                 <div class="item-description">
                   <a href="#">
-                    <h3 class="item-title">Профессиональная селфи-палка </h3>
+                    <h3 class="item-title">Профессиональная<br> селфи-палка </h3>
                   </a>
                   <p class="item-price">1500 руб</p>
                 </div>
@@ -197,7 +195,7 @@
                 </div>
                 <div class="item-description">
                   <a href="#">
-                    <h3 class="item-title">Непотопляемая селфи-палка</h3>
+                    <h3 class="item-title without-letterspacing">Непотопляемая селфи-палка</h3>
                   </a>
                   <p class="item-price">2500 руб</p>
                 </div>
@@ -240,7 +238,7 @@
         </div> <!-- end of inner wrap -->
       </div>  <!-- end of main wrap -->
     </main>
-    <footer class="footer">
+    <footer class="footer inner-footer">
       <div class="container">
         <div class="footer-user-navigation">
           <a>
@@ -250,9 +248,9 @@
             </svg>
           </a>
           <div class="user-navigation-wrapper">
-            <ul class="footer-user-navigation">
+            <ul class="footer-login">
               <li><a href="#" class="login-link">Валентин Петухов</a></li>
-              <li><a href="#" class="exit-link">Выйти</a></li>
+              <li><a href="#">Выйти</a></li>
             </ul>
             <ul class="footer-basket-navigation">
               <li><a href="#" class="comparison-link">Сравнить</a></li>
