--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             <a href="#" class="map-link">
               <img src="img/map.jpg" width="560" height="222" alt="Изображение карты">
             </a>
-            <a href="#" class="button">Напишите нам</a>
+            <a href="#" class="button write-us-link">Напишите нам</a>
           </section>
       </div>
     </main>
@@ -460,8 +460,11 @@
     <!-- PopUp Map -->
         <section class="modal modal-map">
           <h2 class="visually-hidden">Карта</h2>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473677!2d37.527429316086916!3d55.68703400452979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2spl!4v1582294237602!5m2!1sru!2spl" width="960" height="560" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           <button type="button" class="close-modal" aria-label="Закрыть окно"></button>
-          <img src="img/map-big.png" width="960" height="560" alt="Изображение карты">
+          <p><img src="img/map-big.png" width="960" height="560" alt="Офис компании находится по адресу г. Москва, ул. Строителей, 15"></p>
         </section>
+  <script type="text/javascript" src="js/modal-write-us.js"></script>
+  <script type="text/javascript" src="js/modal-map.js"></script>
   </body>
 </html>
