--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <ul>
           <li>
             <a href="#" class="popular-category-link">
-              <div>
+              <div class="popular-category-box">
                 <svg class="popular-vr">
 					        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#vr"></use>
       					</svg>
@@ -237,7 +237,7 @@
           </li>
           <li>
             <a href="monopods.html" class="popular-category-link">
-              <div>
+              <div class="popular-category-box">
                 <svg class="popular-monopods">
 					        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#monopods"></use>
       					</svg>
@@ -247,17 +247,17 @@
           </li>
           <li>
             <a href="#" class="popular-category-link">
-              <div>
+              <div class="popular-category-box">
                 <svg class="popular-camers">
 					        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#camers"></use>
       					</svg>
-              </div>
+              </div class="popular-category-box">
               <p>Экшн-камеры</p>
             </a>
           </li>
           <li>
             <a href="#" class="popular-category-link">
-              <div>
+              <div class="popular-category-box">
                 <svg class="popular-bangles">
 					        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bangles"></use>
       					</svg>
@@ -267,7 +267,7 @@
           </li>
           <li>
             <a href="#" class="popular-category-link">
-              <div>
+              <div class="popular-category-box">
                 <svg class="popular-clocks">
 					        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#clocks"></use>
       					</svg>
@@ -277,7 +277,7 @@
           </li>
           <li>
             <a href="#" class="popular-category-link">
-              <div>
+              <div class="popular-category-box">
                 <svg class="popular-quadrocopters">
 					        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#quadrocopters"></use>
       					</svg>
